--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.20",
+    "@mui/x-charts": "^7.7.1",
     "@uiw/react-codemirror": "^4.22.2",
     "antd": "^5.18.3",
     "axios": "^1.7.2",
